--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <!-- About us area start -->
   <section id="about">
   <!-- our areas of focus start -->
-  <section class="service-area gray-bg">
+  <section class="service-area gray-bg pt-50">
     <div class="container">
       <div>
         <h2>Our key areas of focus</h2>
